RESOLVED FIXED54497
[chromium] Canvas-2D-GPU fails on clearRect() w/identity transform and non-full-canvas rectangle
https://bugs.webkit.org/show_bug.cgi?id=54497
Summary [chromium] Canvas-2D-GPU fails on clearRect() w/identity transform and non-fu...
Stephen White
Reported 2011-02-15 14:43:13 PST
[chromium] Canvas-2D-GPU fails on clearRect() w/identity transform and non-full-canvas rectangle
Attachments
Patch (3.15 KB, patch)
2011-02-15 14:43 PST, Stephen White
no flags
Patch (3.27 KB, patch)
2011-02-15 14:51 PST, Stephen White
no flags
Patch (4.75 KB, patch)
2011-02-15 15:10 PST, Stephen White
jamesr: review+
Stephen White
Comment 1 2011-02-15 14:43:42 PST
Stephen White
Comment 2 2011-02-15 14:45:26 PST
See fast/canvas/canvas-strokeRect.html.
James Robinson
Comment 3 2011-02-15 14:48:36 PST
Comment on attachment 82523 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=82523&action=review R- for the changelog, but code looks good. Is there a test_expectations.txt line we could flip for this test? > Source/WebCore/ChangeLog:8 > + When doing GPU-Canvas2D clearRect() using the fast path (glClear()), > + we were not correctly converting from canvas to screen coordinates. > + Fixed by inverting the rectangle in Y, and changing > + SharedGraphicsContext3D::scissor to take glScissor-like parameters. need a link to the bug in the ChangeLog
Stephen White
Comment 4 2011-02-15 14:51:03 PST
James Robinson
Comment 5 2011-02-15 14:52:31 PST
Comment on attachment 82525 [details] Patch R=me but please see if there's anything in test_expectations.txt that can ensure this change is covered by our bots.
Stephen White
Comment 6 2011-02-15 14:58:42 PST
(In reply to comment #5) > (From update of attachment 82525 [details]) > R=me but please see if there's anything in test_expectations.txt that can ensure this change is covered by our bots. Yes, fast/canvas/canvas-strokeRect.html covers it. I'll add that to the CL.
James Robinson
Comment 7 2011-02-15 15:01:12 PST
(In reply to comment #6) > (In reply to comment #5) > > (From update of attachment 82525 [details] [details]) > > R=me but please see if there's anything in test_expectations.txt that can ensure this change is covered by our bots. > > Yes, fast/canvas/canvas-strokeRect.html covers it. I'll add that to the CL. Are we running that test right now and failing it, is it marked as an expected failure, or do we not run this test in any configuration that would catch this failure?
Stephen White
Comment 8 2011-02-15 15:02:16 PST
(In reply to comment #7) > (In reply to comment #6) > > (In reply to comment #5) > > > (From update of attachment 82525 [details] [details] [details]) > > > R=me but please see if there's anything in test_expectations.txt that can ensure this change is covered by our bots. > > > > Yes, fast/canvas/canvas-strokeRect.html covers it. I'll add that to the CL. > > Are we running that test right now and failing it, is it marked as an expected failure, or do we not run this test in any configuration that would catch this failure? Yes, we're running it now, and it's marked as an expected failure (GPU only). That's how I found this bug. :)
Stephen White
Comment 9 2011-02-15 15:10:27 PST
James Robinson
Comment 10 2011-02-15 15:12:44 PST
Comment on attachment 82532 [details] Patch Sweet!
Stephen White
Comment 11 2011-02-15 15:17:28 PST
Note You need to log in before you can comment on or make changes to this bug.