2011-02-15  Stephen White  <senorblanco@chromium.org>

Reviewed by James Robinson.

        [chromium] clearRect() is incorrect in accelerated 2D canvas.
        https://bugs.webkit.org/show_bug.cgi?id=54497

        When doing GPU-Canvas2D clearRect() using the fast path (glClear()),
        we were not correctly converting from canvas to screen coordinates.
        Fixed by inverting the rectangle in Y, and changing
        SharedGraphicsContext3D::scissor to take glScissor-like parameters.

        Covered by fast/canvas/canvas-strokeRect.html.

        * platform/graphics/chromium/GLES2Canvas.cpp:
        (WebCore::GLES2Canvas::clearRect):
        Flip the Y coord of the rectangle passed to scissor().
        * platform/graphics/gpu/SharedGraphicsContext3D.cpp:
        (WebCore::SharedGraphicsContext3D::scissor):
        * platform/graphics/gpu/SharedGraphicsContext3D.h:
        Give scissor() the same param types as GraphicsContext3D::scissor().
2011-02-15  Stephen White  <senorblanco@chromium.org>

        Reviewed by James Robinson.

        [chromium] Mark fast/canvas/canvas-strokeRect.html as passing on the GPU path.
        https://bugs.webkit.org/show_bug.cgi?id=54497

        * platform/chromium/test_expectations.txt:


Canonical link: https://commits.webkit.org/68620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78625 268f45cc-cd09-0410-ab3c-d52691b4dbfc